--- a/.github/workflows/build_youtube_downloader.yaml
+++ b/.github/workflows/build_youtube_downloader.yaml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Build Executable
       run: |
-        pyinstaller --onefile --noconsole yt_downloader.py
+        pyinstaller --onefile --noconsole youtube_downloader/downloader.py
 
     - name: Upload Executable
       uses: actions/upload-artifact@v2
