Remove automatic publish

--- a/.github/workflows/discord-reminder_wednesday.yaml
+++ b/.github/workflows/discord-reminder_wednesday.yaml
@@ -2,8 +2,8 @@
 name: "Daily Update Reminder"
 
 on:
-  schedule:
-    - cron: '0 8 * * 3'
+  #schedule:
+  #  - cron: '0 8 * * 3'
   workflow_dispatch:
 
 jobs:
